[package]
name = "simulator-for-8086"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.79"
bindgen = "0.64.0"

[lib]
name = "sim86_shared"
path = "src/lib.rs"

[[bin]]
name = "sim86"
path = "src/main.rs"
